# cmake-sdl2-superbuild

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  helloworld.cpp  main.cpp
include/: dog.h
include/anotherheaders/: worked.h
src/: dog.cpp  testing.cpp
